fix branding navigation label

--- a/extension/war/src/main/resources/locale/navigation/group/platform/administrators_en.properties
+++ b/extension/war/src/main/resources/locale/navigation/group/platform/administrators_en.properties
@@ -25,7 +25,7 @@ administration.newstaff=Add User
 administration.management=Manage Users and Groups
 administration.groupnavigation=Group sites Management
 administration.portalnavigation=Sites Management
-administration.branding=Branding
+administration.Branding=Branding
 administration.search=Search
 administration.notification=Notification
 administration.spaces=Spaces Management
