ro injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_ro.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_ro.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Selecta\u0163i utilizatorii din grup
 UISpaceMember.label.MembersLoadingError=Eroare la \u00EEnc\u0103rcarea membrilor acestui spa\u021Biu.
 UISpaceMember.label.PendingUsersLoadingError=Eroare la \u00EEnc\u0103rcarea membrilor \u00EEn a\u0219teptare ai acestui spa\u021Biu.
 UISpaceMember.label.InvitedUsersLoadingError=Eroare la \u00EEnc\u0103rcarea membrilor invita\u021Bi \u00EEn acest spa\u021Biu.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
