--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_ro.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_ro.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u00CEnchide
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Toate notific\u0103rile
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Set\u0103rile de notificare
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Nicio notifica\u021Bie
 UIIntranetNotificationsPortlet.label.Loading=Se \u00EEncarc\u0103
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Marcheaz\u0103 tot ca citit
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
