fr injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_fr.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_fr.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Inviter les membres d'un groupe
 UISpaceMember.label.MembersLoadingError=Erreur lors du chargement des membres de l\u2019espace.
 UISpaceMember.label.PendingUsersLoadingError=Erreur lors du chargement des utilisateurs en attente de l\u2019espace.
 UISpaceMember.label.InvitedUsersLoadingError=Erreur lors du chargement des utilisateurs invit\u00E9s \u00E0 l\u2019espace.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
