--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_fr.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_fr.properties
@@ -219,17 +219,19 @@ Registration.label.close=Fermer
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Toutes les Notifications
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Param\u00E8tres de Notification
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Aucune notification
 UIIntranetNotificationsPortlet.label.Loading=Chargement
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Marquer tout comme lu
+UIIntranetNotificationsPortlet.label.seeAll=See all
 
 #####################################################################################
 #                                    Activity Composer                              #
 #####################################################################################
 
-activity.composer.link=Essayez le nouveau composer
-activity.composer.placeholder=Ne d\u00E9passez pas {0} caract\u00E8res
-activity.composer.title=\u00C9crivez un message court
-activity.composer.post=Publier
-activity.composer.post.error=Une erreur est survenue lors de la publication du message
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
