es-ES injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_es_ES.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_es_ES.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Seleccione los usuarios del grupo
 UISpaceMember.label.MembersLoadingError=Error cargando los miembros del espacio.
 UISpaceMember.label.PendingUsersLoadingError=Error cargando los usuarios pendientes del espacio.
 UISpaceMember.label.InvitedUsersLoadingError=Error cargando miembros invitados al espacio.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
