--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_es_ES.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_es_ES.properties
@@ -219,7 +219,19 @@ Registration.label.close=Cerrar
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Todas las notificaciones
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Configuraci\u00F3n de notificaciones
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Sin Notificaciones
 UIIntranetNotificationsPortlet.label.Loading=Cargando
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Marcar todo como le\u00EDdo
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
