--- a/component/webui/src/main/resources/locale/social/Webui_ar.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_ar.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u0627\u062E\u062A\u064A\u0627\u0631 \u062
 UISpaceMember.label.MembersLoadingError=\u0637\u0631\u0623 \u062E\u0637\u0623 \u0623\u062B\u0646\u0627\u0621 \u0639\u0645\u0644\u064A\u0629 \u062A\u062D\u0645\u064A\u0644 \u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0641\u0636\u0627\u0621.
 UISpaceMember.label.PendingUsersLoadingError=\u0637\u0631\u0623 \u062E\u0637\u0623 \u0623\u062B\u0646\u0627\u0621 \u0639\u0645\u0644\u064A\u0629 \u062A\u062D\u0645\u064A\u0644 \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0627\u0646\u062A\u0638\u0627\u0631 \u0644\u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0641\u0636\u0627\u0621.
 UISpaceMember.label.InvitedUsersLoadingError=\u0637\u0631\u0623 \u062E\u0637\u0623 \u0623\u062B\u0646\u0627\u0621 \u0639\u0645\u0644\u064A\u0629 \u062A\u062D\u0645\u064A\u0644 \u0623\u0639\u0636\u0627\u0621 \u0627\u0644\u0641\u0636\u0627\u0621 \u0627\u0644\u0630\u064A\u0646 \u062A\u0645\u0651\u062A \u062F\u0639\u0648\u062A\u0647\u0645.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
