--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_ar.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_ar.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u0627\u063A\u0644\u0627\u0642
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=\u062C\u0645\u064A\u0639 \u0627\u0644\u0625\u0634\u0639\u0627\u0631\u0627\u062A
 UIIntranetNotificationsPortlet.title.NotificationsSetting=\u0625\u0639\u062F\u0627\u062F\u0627\u062A \u0627\u0644\u0625\u0634\u0639\u0627\u0631\u0627\u062A
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u0644\u0627 \u062A\u0648\u062C\u062F \u0625\u0634\u0639\u0627\u0631\u0627\u062A
 UIIntranetNotificationsPortlet.label.Loading=\u062C\u0627\u0631\u064A \u0627\u0644\u062A\u062D\u0645\u064A\u0644
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u0627\u0639\u062A\u0628\u0631\u0647\u0627 \u062C\u0645\u064A\u0639\u0627\u064B \u0631\u0633\u0627\u0626\u0644 \u0645\u0642\u0631\u0648\u0621\u0629
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
