ca injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_ca.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_ca.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Selecciona els membres del grup
 UISpaceMember.label.MembersLoadingError=Error en carregar membres de l'espai.
 UISpaceMember.label.PendingUsersLoadingError=Error en carregar els usuaris pendents de l'espai.
 UISpaceMember.label.InvitedUsersLoadingError=Error en carregar els usuaris convidats a l'espai.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
