--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_ca.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_ca.properties
@@ -219,7 +219,19 @@ Registration.label.close=Tanca
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Totes les notificacions
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Configuraci\u00F3 de notificacions
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=No hi ha cap notificaci\u00F3
 UIIntranetNotificationsPortlet.label.Loading=Carregant
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Marca-ho tot com a llegit
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
