cs injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_cs.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_cs.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Vybrat u\u017Eivatele ze skupiny
 UISpaceMember.label.MembersLoadingError=P\u0159i na\u010D\u00EDt\u00E1n\u00ED \u010Dlen\u016F m\u00EDstnosti do\u0161lo k chyb\u011B.
 UISpaceMember.label.PendingUsersLoadingError=P\u0159i na\u010D\u00EDt\u00E1n\u00ED \u010Dekaj\u00EDc\u00EDch u\u017Eivatel\u016F v m\u00EDstnosti do\u0161lo k chyb\u011B.
 UISpaceMember.label.InvitedUsersLoadingError=Chyba p\u0159i na\u010D\u00EDt\u00E1n\u00ED u\u017Eivatel\u016F pozvan\u00FDch do m\u00EDstnosti.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
