--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_cs.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_cs.properties
@@ -219,7 +219,19 @@ Registration.label.close=Zav\u0159\u00EDt
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=V\u0161echna upozorn\u011Bn\u00ED
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Nastaven\u00ED ozn\u00E1men\u00ED
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u017D\u00E1dn\u00E1 upozorn\u011Bn\u00ED
 UIIntranetNotificationsPortlet.label.Loading=Nahr\u00E1v\u00E1n\u00ED
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Ozna\u010Dit v\u0161e jako p\u0159e\u010Dten\u00E9
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
