de injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_de.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_de.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=W\u00E4hlen Sie Benutzer aus der Gruppe
 UISpaceMember.label.MembersLoadingError=Fehler beim Laden von Raummitgliedern.
 UISpaceMember.label.PendingUsersLoadingError=Fehler beim Laden des Speicherplatzes f\u00FCr ausstehende Benutzer.
 UISpaceMember.label.InvitedUsersLoadingError=Fehler beim Laden des Raums der eingeladenen Benutzer.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
