--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_de.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_de.properties
@@ -219,7 +219,19 @@ Registration.label.close=Schlie\u00DFen
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Alle Benachrichtigungen
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Benachrichtigungseinstellungen
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Keine Benachrichtigungen
 UIIntranetNotificationsPortlet.label.Loading=Lade
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Alle gelesenen markieren
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
