el injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_el.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_el.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u0395\u03C0\u03B9\u03BB\u03AD\u03BE\u03C4
 UISpaceMember.label.MembersLoadingError=Error loading space members.
 UISpaceMember.label.PendingUsersLoadingError=Error loading space's pending users.
 UISpaceMember.label.InvitedUsersLoadingError=Error loading space's invited users.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
