--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_el.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_el.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u039A\u03BB\u03B5\u03AF\u03C3\u03B9\u03BC\u03BF
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=\u038C\u03BB\u03B5\u03C2 \u03BF\u03B9 \u03B5\u03B9\u03B4\u03BF\u03C0\u03BF\u03B9\u03AE\u03C3\u03B5\u03B9\u03C2
 UIIntranetNotificationsPortlet.title.NotificationsSetting=\u03A1\u03C5\u03B8\u03BC\u03AF\u03C3\u03B5\u03B9\u03C2 \u03B5\u03B9\u03B4\u03BF\u03C0\u03BF\u03AF\u03B7\u03C3\u03B7\u03C2
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u039A\u03B1\u03BC\u03AF\u03B1 \u03B5\u03B9\u03B4\u03BF\u03C0\u03BF\u03AF\u03B7\u03C3\u03B7
 UIIntranetNotificationsPortlet.label.Loading=\u0393\u03AF\u03BD\u03B5\u03C4\u03B1\u03B9 \u03C6\u03CC\u03C1\u03C4\u03C9\u03C3\u03B7
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u03A3\u03AE\u03BC\u03B1\u03BD\u03C3\u03B7 \u03CC\u03BB\u03C9\u03BD \u03C9\u03C2 \u03B1\u03BD\u03B1\u03B3\u03BD\u03C9\u03C3\u03BC\u03AD\u03BD\u03B1
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
