it injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_it.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_it.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Selezionare Utenti dal Gruppo
 UISpaceMember.label.MembersLoadingError=Errore durante il caricamento dello spazio degli utenti.
 UISpaceMember.label.PendingUsersLoadingError=Errore durante il caricamento dello spazio degli utenti in attesa.
 UISpaceMember.label.InvitedUsersLoadingError=Errore durante il caricamento dello spazio degli utenti invitati.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
