--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_it.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_it.properties
@@ -219,7 +219,19 @@ Registration.label.close=Chiuso
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Tutte le notifiche
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Impostazioni notifiche
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Nessuna notifica
 UIIntranetNotificationsPortlet.label.Loading=Caricamento
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Segna tutti come letti
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
