ja injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_ja.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_ja.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u30B0\u30EB\u30FC\u30D7\u304B\u3089\u30E6
 UISpaceMember.label.MembersLoadingError=\u30B9\u30DA\u30FC\u30B9\u306B\u30E1\u30F3\u30D0\u30FC\u3092\u8AAD\u307F\u8FBC\u3080\u969B\u306E\u30A8\u30E9\u30FC
 UISpaceMember.label.PendingUsersLoadingError=\u62DB\u5F85\u4E2D\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u30B9\u30DA\u30FC\u30B9\u306B\u8AAD\u307F\u8FBC\u3080\u969B\u306E\u30A8\u30E9\u30FC
 UISpaceMember.label.InvitedUsersLoadingError=\u62DB\u5F85\u3057\u305F\u30E6\u30FC\u30B6\u30FC\u3092\u30B9\u30DA\u30FC\u30B9\u306B\u8AAD\u307F\u8FBC\u3080\u969B\u306B\u30A8\u30E9\u30FC
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
