--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_ja.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_ja.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u9589\u3058\u308B
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=\u3059\u3079\u3066\u306E\u901A\u77E5
 UIIntranetNotificationsPortlet.title.NotificationsSetting=\u901A\u77E5\u8A2D\u5B9A
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u901A\u77E5\u306A\u3057
 UIIntranetNotificationsPortlet.label.Loading=\u8AAD\u307F\u8FBC\u307F\u4E2D
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u3059\u3079\u3066\u65E2\u8AAD\u306B\u3059\u308B
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
