nl injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_nl.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_nl.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Selecteer gebruikers uit de groep
 UISpaceMember.label.MembersLoadingError=Fout bij het laden van 'space members'.
 UISpaceMember.label.PendingUsersLoadingError=Fout bij het laden van in behandeling zijnde 'space-gebruikers'.
 UISpaceMember.label.InvitedUsersLoadingError=Fout bij het laden van de uitgenodigde 'space-gebruikers'.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
