--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_nl.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_nl.properties
@@ -219,7 +219,19 @@ Registration.label.close=Sluiten
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Alle notificaties
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Notificatie instellingen
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Geen notificatie
 UIIntranetNotificationsPortlet.label.Loading=Laden
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Markeer alle berichten als gelezen
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
