no injection on 20200323-183015

--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_no.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_no.properties
@@ -219,7 +219,19 @@ Registration.label.close=Lukk
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=All Notifications
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Notification Settings
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=No notifications
 UIIntranetNotificationsPortlet.label.Loading=Loading
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Mark all as read
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
