pl injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_pl.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_pl.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Wybierz u\u017Cytkownik\u00F3w z grupy
 UISpaceMember.label.MembersLoadingError=B\u0142\u0105d podczas \u0142adowania cz\u0142onk\u00F3w.
 UISpaceMember.label.PendingUsersLoadingError=Wyst\u0105pi\u0142 b\u0142\u0105d podczas \u0142adowania obszaru oczekuj\u0105cych u\u017Cytkownik\u00F3w.
 UISpaceMember.label.InvitedUsersLoadingError=Wyst\u0105pi\u0142 b\u0142\u0105d podczas \u0142adowania obszaru zaproszonych u\u017Cytkownik\u00F3w.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
