--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_pl.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_pl.properties
@@ -219,7 +219,19 @@ Registration.label.close=Zamknij
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Wszystkie powiadomienia
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Ustawienia powiadomie\u0144
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Brak powiadomie\u0144
 UIIntranetNotificationsPortlet.label.Loading=\u0141adowanie
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Zaznacz wszystko jako przeczytane
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
