--- a/component/webui/src/main/resources/locale/social/Webui_ru.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_ru.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
 UISpaceMember.label.MembersLoadingError=\u041E\u0448\u0438\u0431\u043A\u0430 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0438 \u0447\u043B\u0435\u043D\u043E\u0432 \u043E\u0431\u043B\u0430\u0441\u0442\u0438.
 UISpaceMember.label.PendingUsersLoadingError=\u041E\u0448\u0438\u0431\u043A\u0430 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0438 \u043E\u0436\u0438\u0434\u0430\u044E\u0449\u0438\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439 \u043E\u0431\u043B\u0430\u0441\u0442\u0438.
 UISpaceMember.label.InvitedUsersLoadingError=\u041E\u0448\u0438\u0431\u043A\u0430 \u0437\u0430\u0433\u0440\u0443\u0437\u043A\u0438 \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u043D\u044B\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u0439 \u043E\u0431\u043B\u0430\u0441\u0442\u0438.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
