--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_ru.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_ru.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=\u0412\u0441\u0435 \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u044F
 UIIntranetNotificationsPortlet.title.NotificationsSetting=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043E\u043F\u043E\u0432\u0435\u0449\u0435\u043D\u0438\u0439
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u041D\u0435\u0442 \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0439
 UIIntranetNotificationsPortlet.label.Loading=\u0417\u0430\u0433\u0440\u0443\u0436\u0430\u0435\u0442\u0441\u044F
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u041E\u0442\u043C\u0435\u0442\u0438\u0442\u044C \u0432\u0441\u0451 \u043A\u0430\u043A \u043F\u0440\u043E\u0447\u0438\u0442\u0430\u043D\u043D\u043E\u0435
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
