sl injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_sl.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_sl.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Izberi uporabnike iz skupine
 UISpaceMember.label.MembersLoadingError=Napaka pri nalaganju \u010Dlanov prostora.
 UISpaceMember.label.PendingUsersLoadingError=Napaka pri nalaganju v prostor povabljenih uporabnikov.
 UISpaceMember.label.InvitedUsersLoadingError=Napaka pri nalaganju v prostor povabljenih uporabnikov.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
