--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_sl.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_sl.properties
@@ -219,7 +219,19 @@ Registration.label.close=Zapri
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Vsa obvestila
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Nastavitve obvestil
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Ni obvestil
 UIIntranetNotificationsPortlet.label.Loading=Nalaganje
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Ozna\u010Di vse kot prebrano
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
