sq injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_sq.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_sq.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=crwdns6786747:0crwdne6786747:0
 UISpaceMember.label.MembersLoadingError=crwdns6858576:0crwdne6858576:0
 UISpaceMember.label.PendingUsersLoadingError=crwdns6858577:0crwdne6858577:0
 UISpaceMember.label.InvitedUsersLoadingError=crwdns6858578:0crwdne6858578:0
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
