--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_sq.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_sq.properties
@@ -219,7 +219,19 @@ Registration.label.close=crwdns6786215:0crwdne6786215:0
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=crwdns6812486:0crwdne6812486:0
 UIIntranetNotificationsPortlet.title.NotificationsSetting=crwdns6825036:0crwdne6825036:0
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=crwdns6812488:0crwdne6812488:0
 UIIntranetNotificationsPortlet.label.Loading=crwdns6812489:0crwdne6812489:0
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=crwdns6889198:0crwdne6889198:0
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
