--- a/extension/notification/src/main/resources/locale/notification/template/Notification_sq.properties
+++ b/extension/notification/src/main/resources/locale/notification/template/Notification_sq.properties
@@ -143,6 +143,14 @@ Notification.digest.one.ActivityCommentPlugin=crwdns6794681:0$USERcrwdnd6794681:
 Notification.digest.three.ActivityCommentPlugin=crwdns6794682:0$USER_LISTcrwdnd6794682:0$ACTIVITYcrwdne6794682:0
 Notification.digest.more.ActivityCommentPlugin=crwdns6794746:0$LAST3_USERScrwdnd6794746:0$COUNTcrwdnd6794746:0$ACTIVITYcrwdne6794746:0
 
+Notification.digest.one.EditActivityPlugin=$USER <span style="color:#333333"> edited activity:</span>
+Notification.digest.three.EditActivityPlugin=$USER_LIST <span style="color:#333333">edited their activities:</span>
+Notification.digest.more.EditActivityPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited activities:</span>
+
+Notification.digest.one.EditCommentPlugin=$USER <span style="color:#333333">edited comment:</span>
+Notification.digest.three.EditCommentPlugin=$USER_LIST <span style="color:#333333">edited comments:</span>
+Notification.digest.more.EditCommentPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited comments:</span>
+
 #############################################################################
 #                         ActivityReplyToCommentPlugin                      #
 #############################################################################
