--- a/component/webui/src/main/resources/locale/social/Webui_sv_SE.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_sv_SE.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=V\u00E4lj anv\u00E4ndare fr\u00E5n gruppen
 UISpaceMember.label.MembersLoadingError=Error loading space members.
 UISpaceMember.label.PendingUsersLoadingError=Error loading space's pending users.
 UISpaceMember.label.InvitedUsersLoadingError=Error loading space's invited users.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
