tr injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_tr.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_tr.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Grupdan kullan\u0131c\u0131lar se\u00E7in
 UISpaceMember.label.MembersLoadingError=\u00DCyeler y\u00FCklenirken hata olu\u015Ftu.
 UISpaceMember.label.PendingUsersLoadingError=Alan'\u0131n hen\u00FCz onaylanmayan kullan\u0131c\u0131lar\u0131 y\u00FCklenirken hata olu\u015Ftu.
 UISpaceMember.label.InvitedUsersLoadingError=Alana davet edilen kullan\u0131c\u0131lar y\u00FCklenirken hata olu\u015Ftu.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
