--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_tr.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_tr.properties
@@ -219,7 +219,19 @@ Registration.label.close=Kapat
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=T\u00FCm Bildirimler
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Bilgilendirme Ayarlar\u0131
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Bildirim yok
 UIIntranetNotificationsPortlet.label.Loading=Y\u00FCkleniyor
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=T\u00FCm\u00FCn\u00FC okundu olarak i\u015Faretle
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
