--- a/component/webui/src/main/resources/locale/social/Webui_uk.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_uk.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u0412\u0438\u0431\u0435\u0440\u0456\u0442
 UISpaceMember.label.MembersLoadingError=\u041F\u043E\u043C\u0438\u043B\u043A\u0430 \u043F\u0456\u0434 \u0447\u0430\u0441 \u0437\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0435\u043D\u043D\u044F \u0447\u043B\u0435\u043D\u0456\u0432 \u043E\u0431\u043B\u0430\u0441\u0442\u0456.
 UISpaceMember.label.PendingUsersLoadingError=\u041F\u043E\u043C\u0438\u043B\u043A\u0430 \u0437\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0435\u043D\u043D\u044F \u043E\u0447\u0456\u043A\u0443\u044E\u0447\u0438\u0445 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432 \u043E\u0431\u043B\u0430\u0441\u0442\u0456.
 UISpaceMember.label.InvitedUsersLoadingError=\u041F\u043E\u043C\u0438\u043B\u043A\u0430 \u0437\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0435\u043D\u043D\u044F \u0437\u0430\u043F\u0440\u043E\u0448\u0435\u043D\u0438\u0445 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432 \u043E\u0431\u043B\u0430\u0441\u0442\u0456.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
