zh-CN injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_zh_CN.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_zh_CN.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u4ECE\u7EC4\u4E2D\u9009\u62E9\u7528\u6237
 UISpaceMember.label.MembersLoadingError=Error loading space members.
 UISpaceMember.label.PendingUsersLoadingError=Error loading space's pending users.
 UISpaceMember.label.InvitedUsersLoadingError=Error loading space's invited users.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
