--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_zh_CN.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_zh_CN.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u5173\u95ED
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=\u6240\u6709\u901A\u77E5
 UIIntranetNotificationsPortlet.title.NotificationsSetting=\u901A\u77E5\u8BBE\u7F6E
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u65E0\u901A\u77E5
 UIIntranetNotificationsPortlet.label.Loading=\u52A0\u8F7D\u4E2D
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Mark all read
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
