zh-TW injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_zh_TW.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_zh_TW.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u5F9E\u7FA4\u7D44\u4E2D\u9078\u64C7\u4F7F
 UISpaceMember.label.MembersLoadingError=Error loading space members.
 UISpaceMember.label.PendingUsersLoadingError=Error loading space's pending users.
 UISpaceMember.label.InvitedUsersLoadingError=Error loading space's invited users.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
