--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_zh_TW.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_zh_TW.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u95DC\u9589
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=All Notifications
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Notification Settings
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=No notifications
 UIIntranetNotificationsPortlet.label.Loading=Loading
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u5168\u90E8\u6A19\u793A\u5DF2\u8B80\u53D6
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
