vi injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_vi.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_vi.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Ch\u1ECDn ng\u01B0\u1EDDi d\u00F9ng t\u1EE
 UISpaceMember.label.MembersLoadingError=Error loading space members.
 UISpaceMember.label.PendingUsersLoadingError=Error loading space's pending users.
 UISpaceMember.label.InvitedUsersLoadingError=Error loading space's invited users.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
