--- a/extension/notification/src/main/resources/locale/notification/template/Notification_vi.properties
+++ b/extension/notification/src/main/resources/locale/notification/template/Notification_vi.properties
@@ -131,7 +131,7 @@ Notification.title.EditCommentPlugin=New edit on your activity stream
 Notification.message.ActivityCommentPlugin={0} \u0111\u00E3 \u0111\u0103ng m\u1ED9t b\u00ECnh lu\u1EADn tr\u00EAn ho\u1EA1t \u0111\u1ED9ng c\u1EE7a b\u1EA1n. Xem d\u01B0\u1EDBi \u0111\u00E2y.
 Notification.message.EditCommentPlugin={0} edited a comment on your post. See below for details.
 Notification.message.EditActivityPlugin={0} edited a post.
-Notification.intranet.message.one.ActivityCommentPlugin={0} has commented a post.
+Notification.intranet.message.one.ActivityCommentPlugin={0} has commented on a post.
 Notification.intranet.message.two.ActivityCommentPlugin={0} and {1} have commented a post.
 Notification.intranet.message.more.ActivityCommentPlugin={0}, {1} and {2} more have commented a post.
 Notification.intranet.message.one.EditCommentPlugin={0} edited a comment on your post.
@@ -139,9 +139,17 @@ Notification.intranet.message.two.EditCommentPlugin={0} and {1} edited their com
 Notification.intranet.message.more.EditCommentPlugin={0}, {1} and {2} edited comments.
 Notification.intranet.message.one.EditActivityPlugin={0} edited a post.
 # For Digest
-Notification.digest.one.ActivityCommentPlugin=$USER <span style="color:#333333">has commented this post:</span> $ACTIVITY
+Notification.digest.one.ActivityCommentPlugin=$USER <span style="color:#333333">has commented on this post:</span> $ACTIVITY
 Notification.digest.three.ActivityCommentPlugin=$USER_LIST <span style="color:#333333">have commented this post:</span> $ACTIVITY
 Notification.digest.more.ActivityCommentPlugin=$LAST3_USERS <span style="color:#333333"> v\u00E0</span> $COUNT <span style="color:#333333"> ng\u01B0\u1EDDi kh\u00E1c b\u00ECnh lu\u1EADn v\u1EC1 ho\u1EA1t \u0111\u1ED9ng c\u1EE7a b\u1EA1n:</span> $ACTIVITY
+
+Notification.digest.one.EditActivityPlugin=$USER <span style="color:#333333"> edited activity:</span>
+Notification.digest.three.EditActivityPlugin=$USER_LIST <span style="color:#333333">edited their activities:</span>
+Notification.digest.more.EditActivityPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited activities:</span>
+
+Notification.digest.one.EditCommentPlugin=$USER <span style="color:#333333">edited comment:</span>
+Notification.digest.three.EditCommentPlugin=$USER_LIST <span style="color:#333333">edited comments:</span>
+Notification.digest.more.EditCommentPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited comments:</span>
 
 #############################################################################
 #                         ActivityReplyToCommentPlugin                      #
