--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_vi.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_vi.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u0110\u00F3ng
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=T\u1EA5t c\u1EA3 c\u00E1c th\u00F4ng b\u00E1o
 UIIntranetNotificationsPortlet.title.NotificationsSetting=C\u1EA5u h\u00ECnh th\u00F4ng b\u00E1o
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Kh\u00F4ng c\u00F3 th\u00F4ng b\u00E1o
 UIIntranetNotificationsPortlet.label.Loading=\u0110ang t\u1EA3i
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u0110\u00E1nh d\u1EA5u \u0111\u00E3 \u0111\u1ECDc
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
