pt-BR injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_pt_BR.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_pt_BR.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Selecione os usu\u00E1rios do grupo
 UISpaceMember.label.MembersLoadingError=Erro ao carregar membros do espa\u00E7o.
 UISpaceMember.label.PendingUsersLoadingError=Erro ao carregar os usu\u00E1rios pendentes do espa\u00E7o.
 UISpaceMember.label.InvitedUsersLoadingError=Erro ao carregar os usu\u00E1rios convidados do espa\u00E7o.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
