--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_pt_BR.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_pt_BR.properties
@@ -219,7 +219,19 @@ Registration.label.close=Fechar
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Todas as notifica\u00E7\u00F5es
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Configura\u00E7\u00F5es de Notifica\u00E7\u00E3o
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Sem notifica\u00E7\u00F5es
 UIIntranetNotificationsPortlet.label.Loading=Carregando
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Marcar todas como lida
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
