--- a/extension/notification/src/main/resources/locale/notification/template/Notification_pt_BR.properties
+++ b/extension/notification/src/main/resources/locale/notification/template/Notification_pt_BR.properties
@@ -131,7 +131,7 @@ Notification.title.EditCommentPlugin=H\u00E1 uma nova edi\u00E7\u00E3o no seu fl
 Notification.message.ActivityCommentPlugin={0} postou um coment\u00E1rio sobre a sua atividade. Veja abaixo
 Notification.message.EditCommentPlugin={0} editou um coment\u00E1rio na sua publica\u00E7\u00E3o. Veja os detalhes abaixo.
 Notification.message.EditActivityPlugin={0} editou uma publica\u00E7\u00E3o.
-Notification.intranet.message.one.ActivityCommentPlugin={0} has commented a post.
+Notification.intranet.message.one.ActivityCommentPlugin={0} has commented on a post.
 Notification.intranet.message.two.ActivityCommentPlugin={0} and {1} have commented a post.
 Notification.intranet.message.more.ActivityCommentPlugin={0}, {1} and {2} more have commented a post.
 Notification.intranet.message.one.EditCommentPlugin={0} editou um coment\u00E1rio na sua publica\u00E7\u00E3o.
@@ -139,9 +139,17 @@ Notification.intranet.message.two.EditCommentPlugin={0} e {1} editaram coment\u0
 Notification.intranet.message.more.EditCommentPlugin={0}, {1} e {2} editaram coment\u00E1rios.
 Notification.intranet.message.one.EditActivityPlugin={0} editou uma publica\u00E7\u00E3o.
 # For Digest
-Notification.digest.one.ActivityCommentPlugin=$USER <span style="color:#333333">has commented this post:</span> $ACTIVITY
+Notification.digest.one.ActivityCommentPlugin=$USER <span style="color:#333333">has commented on this post:</span> $ACTIVITY
 Notification.digest.three.ActivityCommentPlugin=$USER_LIST <span style="color:#333333">have commented this post:</span> $ACTIVITY
 Notification.digest.more.ActivityCommentPlugin=$LAST3_USERS <span style="color:#333333"> e</span> $COUNT <span style="color:#333333"> outro(s) comentaram sobre sua atividade:</span> $ACTIVITY
+
+Notification.digest.one.EditActivityPlugin=$USER <span style="color:#333333"> edited activity:</span>
+Notification.digest.three.EditActivityPlugin=$USER_LIST <span style="color:#333333">edited their activities:</span>
+Notification.digest.more.EditActivityPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited activities:</span>
+
+Notification.digest.one.EditCommentPlugin=$USER <span style="color:#333333">edited comment:</span>
+Notification.digest.three.EditCommentPlugin=$USER_LIST <span style="color:#333333">edited comments:</span>
+Notification.digest.more.EditCommentPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited comments:</span>
 
 #############################################################################
 #                         ActivityReplyToCommentPlugin                      #
