id injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_in.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_in.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Pilih pengguna dari grup
 UISpaceMember.label.MembersLoadingError=Kesalahan saat memuat anggota ruang.
 UISpaceMember.label.PendingUsersLoadingError=Gagal memuat jarak pengguna yang tertunda.
 UISpaceMember.label.InvitedUsersLoadingError=Gagal memuat ruang mengundang pengguna.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
