--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_in.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_in.properties
@@ -219,7 +219,19 @@ Registration.label.close=Tutup
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Semua Pemberitahuan
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Pengaturan Notifikasi
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Tidak ada pemberitahuan
 UIIntranetNotificationsPortlet.label.Loading=Sedang memuat
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Tandai semua yang telah dibaca
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
