--- a/component/webui/src/main/resources/locale/social/Webui_fa.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_fa.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u0627\u0646\u062A\u062E\u0627\u0628 \u06A
 UISpaceMember.label.MembersLoadingError=Error loading space members.
 UISpaceMember.label.PendingUsersLoadingError=Error loading space's pending users.
 UISpaceMember.label.InvitedUsersLoadingError=Error loading space's invited users.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
