--- a/extension/notification/src/main/resources/locale/notification/template/Notification_fa.properties
+++ b/extension/notification/src/main/resources/locale/notification/template/Notification_fa.properties
@@ -131,7 +131,7 @@ Notification.title.EditCommentPlugin=New edit on your activity stream
 Notification.message.ActivityCommentPlugin={0} \u0646\u0638\u0631\u06CC \u0631\u0627 \u062F\u0631\u0628\u0627\u0631\u0647 \u0641\u0639\u0627\u0644\u06CC\u062A \u0634\u0645\u0627 \u062B\u0628\u062A \u06A9\u0631\u062F\u0647 \u0627\u0633\u062A. \u067E\u0627\u06CC\u06CC\u0646 \u0631\u0627 \u0646\u06AF\u0627\u0647 \u06A9\u0646\u06CC\u062F
 Notification.message.EditCommentPlugin={0} edited a comment on your post. See below for details.
 Notification.message.EditActivityPlugin={0} edited a post.
-Notification.intranet.message.one.ActivityCommentPlugin={0} has commented a post.
+Notification.intranet.message.one.ActivityCommentPlugin={0} has commented on a post.
 Notification.intranet.message.two.ActivityCommentPlugin={0} and {1} have commented a post.
 Notification.intranet.message.more.ActivityCommentPlugin={0}, {1} and {2} more have commented a post.
 Notification.intranet.message.one.EditCommentPlugin={0} edited a comment on your post.
@@ -139,9 +139,17 @@ Notification.intranet.message.two.EditCommentPlugin={0} and {1} edited their com
 Notification.intranet.message.more.EditCommentPlugin={0}, {1} and {2} edited comments.
 Notification.intranet.message.one.EditActivityPlugin={0} edited a post.
 # For Digest
-Notification.digest.one.ActivityCommentPlugin=$USER <span style="color:#333333">has commented this post:</span> $ACTIVITY
+Notification.digest.one.ActivityCommentPlugin=$USER <span style="color:#333333">has commented on this post:</span> $ACTIVITY
 Notification.digest.three.ActivityCommentPlugin=$USER_LIST <span style="color:#333333">have commented this post:</span> $ACTIVITY
 Notification.digest.more.ActivityCommentPlugin=$LAST3_USERS <span style="color:#333333"> \u0648 </span> $COUNT <span style="color:#333333"> \u0646\u0641\u0631 \u062F\u06CC\u06AF\u0631 \u062F\u0631\u0628\u0627\u0631\u0647 \u0641\u0639\u0627\u0644\u06CC\u062A \u0634\u0645\u0627 \u0646\u0638\u0631 \u062F\u0627\u062F\u0647 \u0627\u0646\u062F: </span> $ACTIVITY
+
+Notification.digest.one.EditActivityPlugin=$USER <span style="color:#333333"> edited activity:</span>
+Notification.digest.three.EditActivityPlugin=$USER_LIST <span style="color:#333333">edited their activities:</span>
+Notification.digest.more.EditActivityPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited activities:</span>
+
+Notification.digest.one.EditCommentPlugin=$USER <span style="color:#333333">edited comment:</span>
+Notification.digest.three.EditCommentPlugin=$USER_LIST <span style="color:#333333">edited comments:</span>
+Notification.digest.more.EditCommentPlugin=$LAST3_USERS <span style="color:#333333">and</span> $COUNT <span style="color:#333333">other(s) edited comments:</span>
 
 #############################################################################
 #                         ActivityReplyToCommentPlugin                      #
