--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_fa.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_fa.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u0628\u0633\u062A\u0646
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=\u0647\u0645\u0647 \u0627\u0637\u0644\u0627\u0639\u06CC\u0647 \u0647\u0627
 UIIntranetNotificationsPortlet.title.NotificationsSetting=\u062A\u0646\u0638\u06CC\u0645\u0627\u062A \u0627\u0637\u0644\u0627\u0639\u06CC\u0647 \u0647\u0627
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u0627\u0637\u0644\u0627\u0639\u06CC\u0647 \u0627\u06CC \u0645\u0648\u062C\u0648\u062F \u0646\u06CC\u0633\u062A
 UIIntranetNotificationsPortlet.label.Loading=\u062F\u0631 \u062D\u0627\u0644 \u0628\u0627\u0631\u06AF\u0630\u0627\u0631\u06CC
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u0647\u0645\u0647 \u0631\u0627 \u0628\u0647 \u0639\u0646\u0648\u0627\u0646 \u062E\u0648\u0627\u0646\u062F\u0647 \u0634\u062F\u0647 \u0639\u0644\u0627\u0645\u062A \u06AF\u0630\u0627\u0631\u06CC \u06A9\u0646
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
