tl injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_tl.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_tl.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Pumili nga mga gumagamit mula sa grupo
 UISpaceMember.label.MembersLoadingError=Mali sa paglo-load ng mga miyembro ng espasyo.
 UISpaceMember.label.PendingUsersLoadingError=Mali sa pag-load ng mga nakabinbing mga gumagamit ng espasyo.
 UISpaceMember.label.InvitedUsersLoadingError=Mali sa pag-load ng mga inanyayahang gumagamit ng espasyo.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
