--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_tl.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_tl.properties
@@ -219,7 +219,19 @@ Registration.label.close=Sarado
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Lahat ng mga abiso
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Ang mga setting ng abiso
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Walang mga abiso
 UIIntranetNotificationsPortlet.label.Loading=Naglo-load
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Markahan lahat bilang nabasa
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
