fil injection on 20200323-183015

--- a/component/webui/src/main/resources/locale/social/Webui_fil.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_fil.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=Pumili ng mga tagagamit mula sa Grupo
 UISpaceMember.label.MembersLoadingError=May mali sa paglo-load ng mga miyembro ng espasyo.
 UISpaceMember.label.PendingUsersLoadingError=May mali sa paglo-load ng mga nakabinbing gumagamit sa espasyo.
 UISpaceMember.label.InvitedUsersLoadingError=May mali sa paglo-load ng mga inimbitahang gumagamit ng espasyo.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
