--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_fil.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_fil.properties
@@ -219,7 +219,19 @@ Registration.label.close=Sarado
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=Ang Lahat ng Notipikasyon
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Ang Mga Setting ng Notipikasyon
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=Walang mga Notipikasyon
 UIIntranetNotificationsPortlet.label.Loading=Naglo-load
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=Markahan lahat na nabasa na
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
