--- a/component/webui/src/main/resources/locale/social/Webui_ur_IN.properties
+++ b/component/webui/src/main/resources/locale/social/Webui_ur_IN.properties
@@ -759,6 +759,8 @@ UISpaceMember.label.SearchGroupAction=\u06AF\u0631\u0648\u067E \u0633\u06D2 \u06
 UISpaceMember.label.MembersLoadingError=\u062E\u0644\u0627\u0626\u06CC \u0645\u0645\u0628\u0631\u0648\u06BA \u06A9\u0648 \u0644\u0648\u0688 \u06A9\u0631\u0646\u06D2 \u0645\u06CC\u06BA \u062E\u0631\u0627\u0628\u06CC.
 UISpaceMember.label.PendingUsersLoadingError=\u062C\u06AF\u06C1 \u06A9\u06D2 \u0632\u06CC\u0631 \u0627\u0644\u062A\u0648\u0627\u0621 \u0635\u0627\u0631\u0641\u06CC\u0646 \u06A9\u0648 \u0644\u0648\u0688 \u06A9\u0631\u0646\u06D2 \u0645\u06CC\u06BA \u062E\u0631\u0627\u0628\u06CC.
 UISpaceMember.label.InvitedUsersLoadingError=\u062E\u0644\u0627 \u06A9\u06D2 \u0645\u062F\u0639\u0648 \u06A9\u0631\u062F\u06C1 \u0635\u0627\u0631\u0641\u06CC\u0646 \u06A9\u0648 \u0644\u0648\u0688 \u06A9\u0631\u0646\u06D2 \u0645\u06CC\u06BA \u062E\u0631\u0627\u0628\u06CC.
+UISpaceMember.label.msg_error_user_binding=User existing in Group
+UISpaceMember.label.bound_user=Bound user
 
 #####################################################################################
 #                                   UISpaceMenu                                     #
