--- a/webapp/portlet/src/main/resources/locale/portlet/Portlets_ur_IN.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/Portlets_ur_IN.properties
@@ -219,7 +219,19 @@ Registration.label.close=\u0628\u0646\u062F
 #####################################################################################
 UIIntranetNotificationsPortlet.title.AllNotifications=All Notifications
 UIIntranetNotificationsPortlet.title.NotificationsSetting=Notification Settings
+UIIntranetNotificationsPortlet.title.notifications=Notifications
 
 UIIntranetNotificationsPortlet.label.NoNotifications=\u06A9\u0648\u0626\u06CC \u0627\u0637\u0644\u0627\u0639\u0627\u062A \u0646\u06C1\u06CC\u06BA
 UIIntranetNotificationsPortlet.label.Loading=Loading
 UIIntranetNotificationsPortlet.label.MarkAllAsRead=\u0633\u0628 \u06A9\u0648 \u067E\u0691\u06BE\u0627 \u06C1\u0648\u0627 \u0634\u0645\u0627\u0631 \u0630\u062F \u06A9\u0631\u06CC\u06BA
+UIIntranetNotificationsPortlet.label.seeAll=See all
+
+#####################################################################################
+#                                    Activity Composer                              #
+#####################################################################################
+
+activity.composer.link=Try the new composer
+activity.composer.placeholder=Please don't exceed {0} characters
+activity.composer.title=Write a Short Message
+activity.composer.post=Post
+activity.composer.post.error=An error occurred when posting the message
